Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Thu Sep 20 2012 Thunor <thunorsif@hotmail.com>
- Removed rate-limit from docs as it means "the rate limit to which the
  monitor will report consecutive change events to the same file" and
  not the initial response time as I mistakenly thought. The initial
  response time doesn't appear to be configurable.
- Tweaked configure.in.
- Added examples/pixmap/pixmap_auto_refresh.
- Added examples/pixmap/pixmap_file_monitor.
- Updated the README.

* Wed Sep 19 2012 Thunor <thunorsif@hotmail.com>
- Added BUILD_DETAILS to the help string.
- Updated the copyright notices.
- Added support for the auto-refresh tag attribute to all widgets that
  currently support file monitors. Auto refreshing can be faster for
  applications that contain 100s of pixmaps or buttons (games) as it
  connects directly to the widget's refresh function and doesn't fire a
  signal through gtkdialog's signal handling system.

* Tue Sep 18 2012 Thunor <thunorsif@hotmail.com>
- Added file-monitor functionality to the notebook widget.
- Refactored the progressbar widget.
- Fixed the progressbar signal handling: it now has a default signal
  "time-out" and it now supports <action signal="type">...</action>.
- Added file-monitor functionality to the radiobutton widget.
- Added file-monitor functionality to the spinbutton widget.
- Added file-monitor functionality to the statusbar widget.
- Added file-monitor functionality to the table widget.
- Added file-monitor functionality to the terminal widget.
- Added file-monitor functionality to the text widget.
- Added file-monitor functionality to the timer widget.
- Added file-monitor functionality to the tree widget.
- Added file-monitor functionality to the window widget.

* Mon Sep 17 2012 Thunor <thunorsif@hotmail.com>
- Refactored the h/vscale widgets.
- Added file-monitor functionality to the h/vscale widgets.